Prevent menu items from overlapping if they line-wrap
Vim automatically cleaned up some whitespace and carriage returns.
The important change in each is:

-#generalconfigmenu li {
-  height: 23px;
+#generalconfigmenu li {

--- a/www/user/htdocs/templates/default/css/main.css
+++ b/www/user/htdocs/templates/default/css/main.css
@@ -1,8 +1,8 @@
 /* main.css */
 /*** https://user.mailcleaner.net/templates/default/css/main.css ***/
 html, body {
-   margin: 0; 
-   padding: 0; 
+   margin: 0;
+   padding: 0;
    border: 0;
    font-family:  Arial;
    font-weight: normal;
@@ -39,20 +39,20 @@ input {
 /** main divs **/
 
 
-#container { 
+#container {
    position:relative;
    margin:0 auto;
    height:auto !important;
-   height: 100%; 
-   min-height: 100%; 
-   width: 100%; 
+   height: 100%;
+   min-height: 100%;
+   width: 100%;
    min-width: 955px;
 }
 
 #pagehead {
-	overflow: auto;
+  overflow: auto;
 }
-	
+
 #pagecontent {
   padding-bottom: 30px;
   overflow: auto;
@@ -144,7 +144,7 @@ input {
   height: 48px;
   line-height: 52px;
   background-image:none;
-    background-color: #F5F5F5;
+  background-color: #F5F5F5;
   border-bottom: 1px solid #D4D3D2;
   overflow: hidden;
   white-space: nowrap;
@@ -166,23 +166,22 @@ input {
   font-size: 12px;
 }
 
-#generalconfigmenu li {  
-  height: 23px;
+#generalconfigmenu li {
   margin: 0px;
   padding: 0px;
-  border-bottom:1px solid #D4D3D2;  
+  border-bottom:1px solid #D4D3D2;
   line-height: 24px;
   padding-left: 13px;
 }
 
-#generalconfigmenu li a {   
+#generalconfigmenu li a {
   color: #666666;
   text-decoration: none;
 }
 #generalconfigmenu li:hover {
   cursor: pointer;
   background-image:none;
-		background-color: #F5F5F5;
+  background-color: #F5F5F5;
 }
 
 #generalconfigcontent {
@@ -200,7 +199,7 @@ input {
   max-width: 628px;
   border-left: 1px solid #D4D3D2;
 }
-  
+
 #generalconfigcontent h1,h2 {
   color: #000000;
   text-decoration: underline;
@@ -208,7 +207,7 @@ input {
   margin: 0px;
   margin-top: 8px;
   margin-bottom: 8px;
-  padding: 0px;	
+  padding: 0px;
 }
 
 #generalconfigcontent h2 {
@@ -225,11 +224,11 @@ input {
   margin-top: 2px;
   text-align: left;
   padding: 0px;
-  line-height: 16px;	
+  line-height: 16px;
 }
 
 #generalconfigcontent li {
-  margin-top: 10px;	
+  margin-top: 10px;
 }
 
 #generalconfigcontent img {
@@ -242,10 +241,10 @@ input {
 .actionslist {
   margin-top: 0px !important;
 }
-	
+
 .actions {
   line-height: 16px;
-  margin-top: 5px !important;	
+  margin-top: 5px !important;
 }
 
 /* tooltip */
@@ -257,7 +256,7 @@ input {
   padding-top: 3px;
   padding-bottom: 3px;
   background-color: #F5F5F5;
-  border:1px solid #D4D3D2; 
+  border:1px solid #D4D3D2;
   z-index: 10;
 }
 
@@ -265,25 +264,25 @@ input {
 /*** MENU ***/
 
 #quarantinebutton:hover{
-	color: #FFFFFF !important;
+    color: #FFFFFF !important;
     background-image: none !important;
     background-color: #E93A00 !important;
 }
 
 #configbutton:hover{
-	color: #FFFFFF !important;
+    color: #FFFFFF !important;
     background-image: none !important;
     background-color: #E93A00 !important;
 }
 
 #helpbutton:hover{
-	color: #FFFFFF !important;
+    color: #FFFFFF !important;
     background-image: none !important;
     background-color: #E93A00 !important;
 }
 
 #statsbutton:hover{
-	color: #FFFFFF !important;
+    color: #FFFFFF !important;
     background-image: none !important;
     background-color: #E93A00 !important;
 }
